# DJANGO-PERSONAL-ASSISTANT

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
Personal_Assistant_WEB/: .env.example  Dockerfile  LICENSE.txt  docker-compose.yml  manage.py  pytest.ini  requirements.txt
Personal_Assistant_WEB/Personal_Assistant_WEB/: asgi.py  settings.py  urls.py  views.py  wsgi.py
Personal_Assistant_WEB/contacts/: forms.py  models.py  urls.py  views.py
Personal_Assistant_WEB/contacts/migrations/: 0001_initial.py  0002_alter_contact_email.py  0002_alter_contact_phone.py
Personal_Assistant_WEB/contacts/static/: style.css
Personal_Assistant_WEB/contacts/tests/: test_forms.py  test_models.py  test_views.py
Personal_Assistant_WEB/filemanager/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
Personal_Assistant_WEB/filemanager/migrations/: 0001_initial.py  0002_remove_file_file_file_created_at_file_name_and_more.py  0003_alter_file_name.py
Personal_Assistant_WEB/live_chat/: apps.py  consumers.py  models.py  server.py  urls.py  views.py
Personal_Assistant_WEB/news/: urls.py  views.py
Personal_Assistant_WEB/notes/: admin.py  forms.py  models.py  urls.py  views.py
Personal_Assistant_WEB/profiles/: forms.py  models.py  urls.py  views.py
Personal_Assistant_WEB/staticfiles/: staticfiles.json
Personal_Assistant_WEB/users/: forms.py  models.py  urls.py  views.py
postgres-data/: postmaster.pid
postgres-data/base/1/: 1259  (+6 more)
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
postgres-data/pg_xact/: 0000
(+526 files in other folders)
